--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,7 @@
    "username": "postgres",
    "password": "postgres",
    "database": "postgres",
-   "synchronize": true,
+   "synchronize": false,
    "logging": false,
    "name": "default",
    "entities": [
