--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "devDependencies": {
       "@types/express": "^4.17.6",
       "@types/node": "^8.0.29",
-      "ts-node": "3.3.0",
+      "ts-node": "^3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
@@ -17,6 +17,7 @@
    },
    "scripts": {
       "dev": "nodemon src/index.ts",
+      "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
       "start": "ts-node --transpileOnly --ignore-watch node_modules src/index.ts"
    }
 }
