Add entity alternative

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -12,14 +12,14 @@
       "src/entity/**/*.ts"
    ],
    "migrations": [
-      "src/migration/**/*.ts"
+      "src/database/migration/**/*.ts"
    ],
    "subscribers": [
       "src/subscriber/**/*.ts"
    ],
    "cli": {
       "entitiesDir": "src/entity",
-      "migrationsDir": "src/migration",
+      "migrationsDir": "src/database/migration",
       "subscribersDir": "src/subscriber"
    }
 }
