--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
       "express": "^4.15.4",
       "pg": "^8.2.1",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.25"
+      "typeorm": "0.2.25",
+      "uuidv4": "^6.0.7"
    },
    "scripts": {
       "dev": "nodemon src/index.ts",
