--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,7 +3,7 @@
    "host": "localhost",
    "port": 5432,
    "username": "postgres",
-   "password": "postgres",
+   "password": "Postgres2018!",
    "database": "postgres",
    "synchronize": false,
    "logging": false,
